--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -24,13 +24,13 @@
                 <tbody>
                 <tr th:each="board : ${boards}">
                     <td th:text="${board.id}"></td>
-                    <td th:text="${board.title}">Mark</td>
+                    <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}"> Mark</a></td>
                     <td>홍길동</td>
                 </tr>
                 </tbody>
             </table>
             <div class="text-right">
-                <button type="button" class="btn btn-primary">쓰기</button>
+                <a type="button" class="btn btn-primary" th:href="@{/board/form}">쓰기</a>
             </div>
 
         </div>
